--- a/index.html
+++ b/index.html
@@ -30,13 +30,16 @@
 
 		</script>
 
+
 		<script src='http://res.wx.qq.com/open/js/jweixin-1.2.0.js'></script>
 
 		<!-- <script src='http://res.wx.qq.com/open/js/jweixin-1.2.0.js'></script> -->
-		<script src='http://localhost:4000/index.js' onError='onError()'></script>
+		<script src='./assets/js/web_socket.js'></script>
+		<!-- <script src='http://localhost:4000/index.js' onError='onError()'></script> -->
+		
+		<script src='./assets/js/index.js'></script>
 		<!--
 		 
-		<script src='./assets/js/index.js'></script>
 		  -->
 	
 		<!-- <script src='http://localhost:4600/index.js' onError='onError()'></script>  -->
