--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 				document.body.appendChild(script);
 			}
 
+			var appData = {
+				wxappid:'wxec2401ee9a70f3d9',
+				wxappsecret:'fc2c8e7c243da9e8898516fa5da8cbbb'
+			}
+
 		</script>
 
 
