--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 			}
 
 			var appData = {
-				wxappid:'wxec2401ee9a70f3d9',
-				wxappsecret:'fc2c8e7c243da9e8898516fa5da8cbbb'
+				wxappid:'wxfacf4a639d9e3bcc',
+				wxappsecret:'149cdef95c99ff7cab523d8beca86080'
 			}
 
 		</script>
